--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -94,3 +94,48 @@
       <label for="toggle-private">Private writing during card editing</label>
     </div>
 </script>
+//TODO GIF MEME
+<script type="text/ng-template" id="gifSearch">
+  <h1>Search Gif</h1>
+  <span>
+	<table>
+		<tbody>
+		<tr>
+			<td/>
+			<td/>
+			<td/>
+			<td align="right"><input class="filter-message" placeholder="Gif search term" name="gifname" type="text" width="100%"/></td>
+			<td align="right"><input name="search" type="submit" value="Search" class="button"/></td>
+		</tr>
+		</tbody>
+	</table>
+	<table>
+		<tbody>
+		<tr>
+			<td><IMG width="200px" SRC="https://media.giphy.com/media/KGVgi2nOVkCoE/giphy.gif"></td>
+			<td><IMG width="200px" SRC="https://media.giphy.com/media/KGVgi2nOVkCoE/giphy.gif"></td>
+			<td><IMG width="200px" SRC="https://media.giphy.com/media/KGVgi2nOVkCoE/giphy.gif"></td>
+		</tr>
+		<tr>
+			<td><IMG width="200px" SRC="https://media.giphy.com/media/KGVgi2nOVkCoE/giphy.gif"></td>
+			<td><IMG width="200px" SRC="https://media.giphy.com/media/KGVgi2nOVkCoE/giphy.gif"></td>
+			<td><IMG width="200px" SRC="https://media.giphy.com/media/KGVgi2nOVkCoE/giphy.gif"></td>
+		</tr>
+		<tr>
+			<td><IMG width="200px" SRC="https://media.giphy.com/media/KGVgi2nOVkCoE/giphy.gif"></td>
+			<td><IMG width="200px" SRC="https://media.giphy.com/media/KGVgi2nOVkCoE/giphy.gif"></td>
+			<td><IMG width="200px" SRC="https://media.giphy.com/media/KGVgi2nOVkCoE/giphy.gif"></td>
+		</tr>
+		</tbody>
+	</table>
+	<table>
+		<tbody>
+		<tr>
+			<td/>
+			<td align="right"><a ng-click="modalService.closeAll();">Cancel</a></td>
+			<td align="right"><a ng-click="modalService.addGif();">Submit</a></td>
+		</tr>
+		</tbody>
+	</table>
+  </span>
+</script>
