--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -95,6 +95,7 @@
     </div>
 </script>
 //TODO GIF MEME
+//To use it add a new ngDialog for gifSearch, className: 'ngdialog-theme-plain bigDialog'
 <script type="text/ng-template" id="gifSearch">
   <h1>Search Gif</h1>
   <span>
