Changes from AJA

--- a/stylesheets/_message.scss
+++ b/stylesheets/_message.scss
@@ -81,6 +81,15 @@
     left: auto;
     font-size: 1em;
   }
+
+  .gif-link {
+    top: 26px;
+    right: 12px;
+    bottom: 12px;
+    left: auto;
+    font-size: 1em;
+    color: black;
+  }
 }
 
 .votes {
