--- a/stylesheets/_message.scss
+++ b/stylesheets/_message.scss
@@ -72,6 +72,13 @@
     position: absolute;
     top: 0.4em;
     right: 0.5em;
+  } 
+  
+  .gif-body-link {
+    position: relative;
+    top: 0.4em;
+    left: 0.5em;
+    right: 0.5em;
   }
 
   .delete-link {
