Sending static gif to message

--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -111,19 +111,19 @@
 	<table>
 		<tbody>
 		<tr>
-			<td><IMG width="200px" SRC="https://media.giphy.com/media/KGVgi2nOVkCoE/giphy.gif"></td>
-			<td><IMG width="200px" SRC="https://media.giphy.com/media/KGVgi2nOVkCoE/giphy.gif"></td>
-			<td><IMG width="200px" SRC="https://media.giphy.com/media/KGVgi2nOVkCoE/giphy.gif"></td>
+			<td><IMG width="200px" SRC="https://media.giphy.com/media/l3q2yYNt8DXoyKRdm/giphy.gif"></td>
+			<td><IMG width="200px" SRC="https://media.giphy.com/media/l3q2yYNt8DXoyKRdm/giphy.gif"></td>
+			<td><IMG width="200px" SRC="https://media.giphy.com/media/l3q2yYNt8DXoyKRdm/giphy.gif"></td>
 		</tr>
 		<tr>
-			<td><IMG width="200px" SRC="https://media.giphy.com/media/KGVgi2nOVkCoE/giphy.gif"></td>
-			<td><IMG width="200px" SRC="https://media.giphy.com/media/KGVgi2nOVkCoE/giphy.gif"></td>
-			<td><IMG width="200px" SRC="https://media.giphy.com/media/KGVgi2nOVkCoE/giphy.gif"></td>
+			<td><IMG width="200px" SRC="https://media.giphy.com/media/l3q2yYNt8DXoyKRdm/giphy.gif"></td>
+			<td><IMG width="200px" SRC="https://media.giphy.com/media/l3q2yYNt8DXoyKRdm/giphy.gif"></td>
+			<td><IMG width="200px" SRC="https://media.giphy.com/media/l3q2yYNt8DXoyKRdm/giphy.gif"></td>
 		</tr>
 		<tr>
-			<td><IMG width="200px" SRC="https://media.giphy.com/media/KGVgi2nOVkCoE/giphy.gif"></td>
-			<td><IMG width="200px" SRC="https://media.giphy.com/media/KGVgi2nOVkCoE/giphy.gif"></td>
-			<td><IMG width="200px" SRC="https://media.giphy.com/media/KGVgi2nOVkCoE/giphy.gif"></td>
+			<td><IMG width="200px" SRC="https://media.giphy.com/media/l3q2yYNt8DXoyKRdm/giphy.gif"></td>
+			<td><IMG width="200px" SRC="https://media.giphy.com/media/l3q2yYNt8DXoyKRdm/giphy.gif"></td>
+			<td><IMG width="200px" SRC="https://media.giphy.com/media/l3q2yYNt8DXoyKRdm/giphy.gif"></td>
 		</tr>
 		</tbody>
 	</table>
@@ -132,7 +132,7 @@
 		<tr>
 			<td/>
 			<td align="right"><a ng-click="modalService.closeAll();">Cancel</a></td>
-			<td align="right"><a ng-click="modalService.addGif();">Submit</a></td>
+			<td align="right"><button class="button" ng-click="addGif(message)">Add Gif</button></td>
 		</tr>
 		</tbody>
 	</table>
