--- a/components/mainContent.html
+++ b/components/mainContent.html
@@ -31,7 +31,7 @@
               <div class="front" ng-class="{'filter': isCensored(message, boardObject.text_editing_is_private)}">
                   <div class="message-body">
                       <div class="text" ng-bind-html="message.text | linky:'_blank'"></div>
-					  <img src="https://media.giphy.com/media/l3q2yYNt8DXoyKRdm/giphy.gif" ng-model="message.gif" aria-label="Message text entry" ng-change="messages.$save(message)" class="gif-body-link"/>
+					  <img src="{{message.gif_url}}" ng-model="message.gif_url" aria-label="Message text entry" ng-change="messages.$save(message)" class="gif-body-link"/>
                       <a href="javascript:void(0)" class="pencil message-body-link" ng-click="isEditing = true; utils.focusElement(message.$id); updateEditingMessage(message, true);" aria-label="Edit message"><i class="fa fa-pencil"></i></a>
                   </div>
                   <div class="votes">
@@ -65,7 +65,7 @@
                 {{ message.text }}
               </div>
 			  <div class="placeholder">
-			    <img src="https://media.giphy.com/media/l3q2yYNt8DXoyKRdm/giphy.gif" ng-model="message.gif" aria-label="Message text entry" ng-change="messages.$save(message)" class="gif-body-link"/>
+			    <img src="{{message.gif_url}}" ng-model="message.gif_url" aria-label="Message text entry" ng-change="messages.$save(message)" class="gif-body-link"/>
 			  </div>
             </div>
           </li>
