Next button logic

--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -136,6 +136,7 @@
 		<tr>
 			<td/>
 			<td align="right"><a ng-click="modalService.closeAll();">Cancel</a></td>
+			<td align="right"><a ng-click="findNextGifs();">Next</a></td>
 			<td align="right"><a ng-click="modalService.addGif();">Submit</a></td>
 		</tr>
 		</tbody>
