--- a/stylesheets/_message.scss
+++ b/stylesheets/_message.scss
@@ -88,6 +88,14 @@
     font-size: 1em;
   }
 
+  .delete-meme {
+    top: auto;
+    right: 25px;
+    bottom: 12px;
+    left: auto;
+    font-size: 1em;
+  }
+
   .gif-link {
     top: 30px;
     right: 12px;
