--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -171,7 +171,7 @@
 	<table>
 		<tbody>
         <tr ng-repeat="gifRow in gifs track by $index">
-            <td ng-repeat="gif in gifRow track by $index"><IMG height="100px" SRC={{gif}} ng-click="selectMeme(gif)></td>
+            <td ng-repeat="gif in gifRow track by $index"><img height="100px" src={{gif}} ng-click="selectMeme(gif)"></td>
         </tr>
 		</tbody>
 	</table>
