Add meme with text

--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -157,10 +157,7 @@
 		<tr>
 			<td align="right"><input class="filter-message" placeholder="Gif search term" name="gifname" type="text"
                                      width="100%" ng-model="gifname"/></td>
-			<td align="right"><input name="search" type="submit" value="Search" class="button" ng-click="loadAndShowGifs()"/></td>
-		</tr>
-		<tr>
-			<td align="right"><input class="filter-message" placeholder="Link to base image" name="memeName" type="text" width="100%" ng-model="memeName"/></td>
+			<td align="right"><input name="search" type="submit" value="Search" class="button" ng-click="loadAndShowMemes()"/></td>
 		</tr>
 		<tr>
 			<td align="right"><input class="filter-message" placeholder="Top text" name="memeTop" type="text" width="100%" ng-model="mameTop"/></td>
