reverted test commit

--- a/components/mainPage.html
+++ b/components/mainPage.html
@@ -14,7 +14,7 @@
   <section class="difference-versions">
     <h2>Differences between the free and
       <a href="https://funretro.io">Premium</a> versions</h2>
-    <p class="premium-desc">With the premium version you can see the history of all your retrospectives, beter control of who can edit your board,
+    <p class="premium-desc">With the premium version you can see the history of all your retrospectives, better control of who can edit your board,
       manage multiple teams and much more!</p>
     <table class="table table-striped table-hover">
       <thead>
