--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -125,7 +125,7 @@
 			<td/>
 			<td/>
 			<td align="right"><input class="filter-message" placeholder="Gif search term" name="gifname" type="text"
-                                     width="100%" ng-model="gifname"/></td>
+                                     width="100%" ng-model="gifname" ng-keyup="submitOnEnter($event, 'loadAndShowGifs', gifname)"/></td>
 			<td align="right"><input name="search" type="submit" value="Search" class="button" ng-click="loadAndShowGifs()"/></td>
 		</tr>
 		</tbody>
@@ -156,7 +156,7 @@
 		<tbody>
 		<tr>
 			<td align="right"><input class="filter-message" placeholder="Gif search term" name="gifname" type="text"
-                                     width="100%" ng-model="gifname"/></td>
+                                     width="100%" ng-model="gifname" ng-keyup="submitOnEnter($event, 'loadAndShowMemes', gifname)"/></td>
 			<td align="right"><input name="search" type="submit" value="Search" class="button" ng-click="loadAndShowMemes()"/></td>
 		</tr>
 		<tr>
