--- a/stylesheets/_select.scss
+++ b/stylesheets/_select.scss
@@ -20,6 +20,17 @@ select.import-select {
   width: 138px;
 }
 
+.div-popup.our-css {
+  display: table-cell;
+  padding: 20px;
+}
+
+.img-popup.our-css {
+  border: 5px solid white;
+  height: 125px;
+  width: 125px;
+}
+
 .with-border.selected.our-css {
   border: 5px solid blue;
 }
