--- a/stylesheets/_menu.scss
+++ b/stylesheets/_menu.scss
@@ -100,16 +100,30 @@
   }
 }
 
-.pictureLink {
-  width: 420px;
+.filter-message-our {
+  width: 200px;
   height: 25px;
-  margin-left: 15px;
+  margin: auto;
   font-size: 0.85em;
   vertical-align: top;
   border-radius: 3px;
 
+  @media (max-width: 500px) {
+    width: 170px;
+  }
+}
+
+#pic {
+  padding: 5px;
+  margin: auto;
+  margin-top: 10px;
+  width: 100%;
+  height: 25px;
+  vertical-align: top;
+  border-radius: 3px;
+
   @media (max-width: 1000px) {
-    width: 340px;
+    width: 100%;
     margin-left: 5px;
   }
 }
