--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -176,7 +176,7 @@
 		<tbody>
 		<tr>
 			<td align="right"><a ng-click="modalService.closeAll();">Cancel</a></td>
-			<td align="right"><a ng-click="findNextGifs();">Next</a></td>
+			<td align="right"><a ng-click="findNextMemes();">Next</a></td>
 			<td align="right"><button class="button" ng-click="addMeme(message)">Add Meme</button></td>
 		</tr>
 		</tbody>
