--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -147,6 +147,7 @@
   </span>
 </script>
 <script type="text/ng-template" id="memeSearch">
+    <div class="scrollable-our">
     <h1>Search Meme</h1>
     <span>
 	<table>
@@ -182,4 +183,5 @@
 		</tbody>
 	</table>
   </span>
+        </div>
 </script>
