--- a/components/dialogs.html
+++ b/components/dialogs.html
@@ -139,6 +139,7 @@
 		<tr>
 			<td/>
 			<td align="right"><a ng-click="modalService.closeAll();">Cancel</a></td>
+            <td align="right"><a ng-click="findPreviousGifs();">Previous</a></td>
 			<td align="right"><a ng-click="findNextGifs();">Next</a></td>
 			<td align="right"><button class="button" ng-click="addGif(message)">Add Gif</button></td>
 		</tr>
@@ -176,6 +177,7 @@
 		<tbody>
 		<tr>
 			<td align="right"><a ng-click="modalService.closeAll();">Cancel</a></td>
+            <td align="right"><a ng-click="findPreviousMemes();">Previous</a></td>
 			<td align="right"><a ng-click="findNextMemes();">Next</a></td>
 			<td align="right"><button class="button" ng-click="addMeme(message)">Add Meme</button></td>
 		</tr>
