Modified random points generation

--- a/stylesheets/_message.scss
+++ b/stylesheets/_message.scss
@@ -88,6 +88,14 @@
     font-size: 1em;
   }
 
+  .random-point {
+    top: auto;
+    right: 40px;
+    bottom: 12px;
+    left: auto;
+    font-size: 1em;
+  }
+
   .delete-meme {
     top: auto;
     right: 25px;
